--- a/styles/Tutorials.module.css
+++ b/styles/Tutorials.module.css
@@ -5,7 +5,7 @@
 	background-color: rgb(231, 231, 231);
 }
 .container {
-	background-color: white;
+	background-color: #bfbddb;
 	position: absolute;
 	margin-top: 0;
 	width: 90%;
